Getting the bottom of the pdf viewer to display (bug 1240776)
- change allows for a bit of the base of the display so it doesn't
look broken

--- a/htdocs/artefact/file/blocktype/pdf/js/pdfjs/web/viewer.css
+++ b/htdocs/artefact/file/blocktype/pdf/js/pdfjs/web/viewer.css
@@ -193,7 +193,7 @@ html[dir='rtl'] .innerCenter {
 
 #outerContainer {
   width: 100%;
-  height: 100%;
+  height: 98%;
   position: relative;
 }
 
